<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="ok">OK</string>
    <string name="app_name">NexusPad</string>
    <string name="entry">Entry</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="events">Events</string>
    <string name="event">Event</string>
    <string name="journal">Journal</string>
    <string name="docs">Docs</string>
    <string name="doc">Doc</string>
    <string name="photos">Photos</string>
    <string name="photo">Photo</string>
    <string name="task">Task</string>
    <string name="file">File</string>
    <string name="photos_upload">Photos Upload</string>
    <string name="albums">Albums</string>
    <string name="album">Album</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="folder">Folder</string>
    <string name="attachments">Attachments</string>
    <string name="username_or_email">Username or Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="business_name">Business Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="lbl_sign_up">First time here? Click here to sign up.</string>
    <string name="lbl_login">Have an account? Click here to login.</string>
    <string name="err_empty_field">This field must not be empty.</string>
    <string name="err_login_failed">Login failed. Please try again later.</string>
    <string name="err_invalid_bookmark">Please check the web address of the bookmark.</string>
    <string name="err_no_email_app">No email app installed.</string>
    <string name="err_no_browser">No browser installed.</string>
    <string name="err_no_map">No map installed.</string>
    <string name="formatted_err_delete_failed">Failed to delete \"%s\". Please try again later.</string>
    <string name="err_network">Please check your network connection.</string>
    <string name="err_internal">An internal error has occurred. Please try again later.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="folders">Folders</string>
    <string name="select_folder">Select Folder</string>
    <string name="calendars">Calendars</string>
    <string name="more">More</string>
    <string name="new_">New</string>
    <string name="search">Search</string>
    <string name="new_photos">New Photos</string>
    <string name="new_album">New Album</string>
    <string name="new_event">New Event</string>
    <string name="new_folder">New Folder</string>
    <string name="new_bookmark">New Bookmark</string>
    <string name="new_contact">New Contact</string>
    <string name="new_doc">New Doc</string>
    <string name="folder_name">Folder Name</string>
    <string name="parent_folder">Parent Folder</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="empty_folder">The folder is empty</string>
    <string name="empty_calendar">The calendar is empty</string>
    <string name="empty_bookmarks">No Bookmarks in this folder</string>
    <string name="empty_photos">No Photos in this folder</string>
    <string name="empty_contacts">No Contacts in this folder</string>
    <string name="empty_docs">No Docs in this folder</string>
    <string name="empty_events">No Events in this calendar</string>
    <string name="loading_more">Loading More…</string>
    <string name="title">Title</string>
    <string name="web_address">Web Address</string>
    <string name="address">Address</string>
    <string name="note">Note</string>
    <string name="tags">Tags</string>
    <string name="root">ROOT</string>

    <string name="my_contacts">MY CONTACTS</string>
    <string name="my_activities">MY CALENDAR</string>
    <string name="my_bookmarks">MY BOOKMARKS</string>
    <string name="my_docs">MY DOCS</string>
    <string name="my_photos">MY PHOTOS</string>

    <!-- account settings -->
    <string name="account_settings">Account Settings</string>
    <string name="account_email">Email</string>
    <string name="account_usage">Usage</string>
    <string name="email_support">Email Support</string>
    <string name="account_info">Account Info</string>
    <string name="support">Support</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="format_ac_usage">%1$s / %2$s</string>

    <!-- first name, last name -->
    <string name="format_ac_name">%1$s %2$s</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="porfile_image">Porfile Image</string>
    <string name="no_name">(No Name)</string>
    <string name="usage_unavailable">(usage unavailable)</string>
    <!-- example: 50%  150/300 -->
    <string name="formatted_progress">%1$s%%  %2$s/%3$s</string>
    <string name="upload_completed">Upload completed</string>
    <string name="upload_failed">Upload failed</string>
    <string name="add_more">Add More…</string>

    <string name="others">Others</string>
    <!-- example: Folders under Dev Libs -->
    <string name="formatted_sub_folders">%1$s</string>
    <string name="phones">Phones</string>
    <string name="phone">Phone</string>
    <string name="empty_potos_promt">Click on the camera to add photos.</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="location">Location</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="all_day">ALL DAY</string>
    <string name="month">Month</string>
    <string name="month_view">Month View</string>
    <string name="agenda">Agenda</string>

    <string name="recurrence">Repeat</string>
    <string name="no_recurrence">No repeat</string>
    <string name="repeat_daily">Repeat daily</string>
    <string name="repeat_weekly">Repeat weekly</string>
    <string name="repeat_monthly">Repeat monthly</string>
    <string name="repeat_yearly">Repeat yearly</string>

    <string name="recurrence_interval_daily">Repeat every %1$d day(s)</string>
    <string name="recurrence_interval_weekly">Repeat every %1$d week(s)</string>
    <string name="recurrence_interval_monthly">Repeat every %1$d month(s)</string>
    <string name="recurrence_interval_yearly">Repeat every %1$d year(s)</string>

    <string name="repeat_n_times">Repeat %1$s times</string>
    <string name="repeat_forever">Repeat forever</string>
    <string name="select_date">Select date</string>
    <string name="end_by">End by</string>

    <string name="undo">Undo</string>

    <string name="cancel">CANCEL</string>
    <string name="done">DONE</string>
    <string name="discard">DISCARD</string>

    <!-- example: Deleted Bookmark: "Google" -->
    <string name="format_deleted_entry">Deleted %1$s: \"%2$s\"</string>
    <!-- example: Deleted Folder: "Just for fun" -->
    <string name="format_deleted_folder">Deleted Folder: \"%1$s\"</string>
    <string name="no_connection">No connection</string>
    <string name="retry">Retry</string>
    <string name="add_attachment">Add attachment…</string>

    <string name="formatted_err_delete_failed">Failed to delete \"%s\". Please try again later.</string>
    <string name="formatted_err_update_failed">Failed to update \"%s\". Please try again later.</string>

    <plurals name="numberOfPhotos">
        <item quantity="one">1 photo</item>
        <item quantity="other">%d photos</item>
    </plurals>
</resources>