<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_street_address"
            style="@style/formMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address" />

        <EditText
            android:id="@+id/txt_city"
            style="@style/formMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/city" />

        <LinearLayout
            style="@style/formMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapWords"
                android:hint="@string/state" />

            <EditText
                android:id="@+id/txt_zip_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/zip_code" />
        </LinearLayout>

        <EditText
            android:id="@+id/txt_country"
            style="@style/formMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/country" />
    </LinearLayout>
</ScrollView>