<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        style="@style/autoMargin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginBottom="@dimen/np_padding_medium"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_ab" />
            <TextView
                style="@style/logoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_or_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txt_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textCapWords"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txt_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textCapWords"
            android:visibility="gone" />

        <EditText
            android:id="@+id/txt_confirm_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:visibility="gone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/login" />

            <ProgressBar
                android:id="@android:id/progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/lbl_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="@dimen/np_padding_small"
            android:text="@string/lbl_sign_up"
            android:textSize="@dimen/np_textsize_small" />
    </LinearLayout>

</ScrollView>