<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/ed__padding_small"
    android:paddingRight="@dimen/ed__padding_small"
    android:scrollbarStyle="outsideOverlay" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ed__padding_medium"
            android:contentDescription="@string/app_name"
            android:src="@drawable/np_banner" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@android:id/icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="@dimen/ed__padding_small"
                android:contentDescription="@string/porfile_image"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/lbl_ac_name"
                    style="@style/stylePrimaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/lbl_ac_username"
                    style="@style/styleSecondaryTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/ed__textsize_medium" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_info" />

        <LinearLayout
            android:id="@+id/frame_ac_email"
            style="@style/selectableTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="0dp" >

            <TextView
                style="@style/stylePrimaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_email" />

            <TextView
                android:id="@+id/lbl_ac_email"
                style="@style/styleSecondaryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include layout="@layout/include_horizontal_divider" />

        <TextView
            style="@style/stylePrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/account_usage" />

        <TextView
            android:id="@+id/lbl_ac_usage"
            style="@style/styleSecondaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/support" />

        <TextView
            android:id="@+id/lbl_email_support"
            style="@style/selectableTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_support" />

        <include layout="@layout/include_horizontal_divider" />

        <TextView
            android:id="@+id/lbl_terms_of_use"
            style="@style/selectableTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_use" />
    </LinearLayout>

</ScrollView>